--- a/package.json
+++ b/package.json
@@ -1,24 +1,35 @@
 {
-  "name": "cypress-api-automation",
+  "name": "ci-github actions",
   "version": "1.0.0",
-  "description": "Projeto de automação de testes de API com Cypress",
+  "description": "Teste de integração CI no github actions",
   "main": "index.js",
   "scripts": {
-    "test": "cypress run",
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "test": "npm run cy:run",
+    "cy.run": "npx cypress run",
+    "cy:run": "cypress run --headless --browser chrome --reporter mochawesome --reporter-options reportDir=cypress/results,reportFilename=custom-[name],overwrite=false,html=false,json=true"
+,
+    "cy:report": "npx mochawesome-merge cypress/results/custom-*.json > cypress/results/merged-report.json"
+,
+    "cy:report:html": "npx mochawesome-report-generator cypress/results/merged-report.json --reportDir cypress/results --reportFilename index.html",
+    "start": "npx serverest",
+    "cy:run-ci": "start-server-and-test start http://localhost:3000 cy:run",
+    "clean:reports": "del /q cypress\\results\\*.json",
+    "cy:full-report": "npm run clean:reports && npm run cy:run && npm run cy:report && npm run cy:report:html"
   },
-  "keywords": [
-    "cypress",
-    "api",
-    "automation",
-    "qa",
-    "rest"
-  ],
-  "author": "Diego",
-  "license": "MIT",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "cypress": "^13.6.6"
+    "@faker-js/faker": "^9.7.0",
+    "faker": "^6.6.6",
+    "http-server": "^14.1.1",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^5.0.0",
+    "mochawesome-report-generator": "^6.2.0",
+    "rimraf": "^6.0.1",
+    "start-server-and-test": "^2.0.11"
+  },
+  "dependencies": {
+    "cypress": "^14.1.0"
   }
 }
-
