--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
   "scripts": {
     "test": "npm run cy:run",
     "cy.run": "npx cypress run",
-    "cy:run": "cypress run --headless --browser chrome --reporter mochawesome --reporter-options reportDir=cypress/results,reportFilename=custom-[name],overwrite=false,html=false,json=true"
-,
-    "cy:report": "npx mochawesome-merge cypress/results/custom-*.json > cypress/results/merged-report.json"
-,
+    "cy:run": "cypress run --headless --browser chrome --reporter mochawesome --reporter-options reportDir=cypress/results,reportFilename=mochawesome,overwrite=false,html=false,json=true",
+    "cy:report": "npx mochawesome-merge cypress/results/*.json > cypress/results/merged-report.json",
     "cy:report:html": "npx mochawesome-report-generator cypress/results/merged-report.json --reportDir cypress/results --reportFilename index.html",
     "start": "npx serverest",
+    "cy:full-report": "npm run cy:run && npm run cy:report && npm run cy:report:html", 
     "cy:run-ci": "start-server-and-test start http://localhost:3000 cy:run",
     "clean:reports": "rm -f cypress/results/*.json",
 
